--- a/app/views/charts.html
+++ b/app/views/charts.html
@@ -48,9 +48,9 @@
 
 	</form>
 	
-	<hr class="col-sm-12 hr-style"/>
+	<hr class="col-sm-12 hr-style" ng-if='logged'/>
 
-	<div clas="col-sm-12">
+	<div clas="col-sm-12" ng-if='logged'>
 		<div class="col-sm-5"></div>
 
 		<gauge-panel
